--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti72:2.3": "La via d’uscita (di fuga) dai piaceri dei sensi, ovvero la rinuncia; la via d’uscita dalla materialità, ovvero l’immateriale; la via d’uscita da quello che è venuto in essere, creato, sorto in dipendenza, ovvero la cessazione. ",
   "iti72:3.1": "Avendo conosciuto la via d’uscita dai piaceri dei sensi ",
   "iti72:3.2": "e trascendendo la materialità, ",
-  "iti72:3.3": "chi è ardente tocca/sperimenta sempre ",
+  "iti72:3.3": "chi è ardente tocca sempre ",
   "iti72:3.4": "il calmarsi di ogni attività. ",
   "iti72:4.1": "Il cercatore che vede nel modo giusto (correttamente), * ",
   "iti72:4.2": "in questo modo si libera. ",
