--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti74:3.4": "Non si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare sostanze intossicanti e hanno cattive abitudini immorali. ",
   "iti74:3.5": "Il loro figlio invece si comporta altrimenti. ",
   "iti74:3.8": "In questo modo il figlio va in una classe sociale superiore. (È così che un figlio ha una nascita superiore) ",
-  "iti74:4.1": "E come un figlio è nato in una classe sociale identica? (E qual è il figlio con una nascita equiparabile?) ",
+  "iti74:4.1": "E come un figlio va nato in una classe sociale identica? (E qual è il figlio con una nascita equiparabile?) ",
   "iti74:4.2": "In questo caso la madre e il padre del figlio ",
   "iti74:4.3": "prendono rifugio nel Buddha, nel Dhamma, e nel Sangha. ",
   "iti74:4.4": "Si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare sostanze intossicanti, e hanno buone abitudini morali. ",
