--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti74:4.3": "prendono rifugio nel Buddha, nel Dhamma, e nel Sangha. ",
   "iti74:4.4": "Si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare sostanze intossicanti, e hanno buone abitudini morali. ",
   "iti74:4.5": "Il loro figlio si comporta allo stesso modo. ",
-  "iti74:4.8": "In questo modo il figlio va in una classe sociale identica. (È così che un figlio ha una nascita equiparabile) ",
+  "iti74:4.8": "In questo modo il figlio va in una classe sociale identica. ",
   "iti74:5.1": "E come un figlio è nato in una classe sociale peggiore? (E qual è il figlio con una nascita inferiore?) ",
   "iti74:5.2": "In questo caso la madre e il padre del figlio ",
   "iti74:5.3": "prendono rifugio nel Buddha, nel Dhamma, e nel Sangha. ",
