--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -19,7 +19,7 @@
   "iti74:5.3": "prendono rifugio nel Buddha, nel Dhamma, e nel Sangha. ",
   "iti74:5.4": "Si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare sostanze intossicanti, e hanno buone abitudini morali. ",
   "iti74:5.5": "Il loro figlio invece si comporta altrimenti. ",
-  "iti74:5.8": "In questo modo il figlio è nato in una classe sociale peggiore. (È così che un figlio ha una nascita inferiore) ",
+  "iti74:5.8": "In questo modo il figlio va in una classe sociale peggiore. ",
   "iti74:6.1": "I saggi desiderano che i propri figli ",
   "iti74:6.2": "nascano in una classe sociale migliore o identica, (abbiano una nascita migliore o equiparabile) ",
   "iti74:6.3": "non in una peggiore, (non una peggiore,) ",
