--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti74:3.4": "Non si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare alcolici e sostanze intossicanti e hanno cattive abitudini immorali. ",
   "iti74:3.5": "Il loro figlio invece ",
   "iti74:3.6": "prende rifugio nel Buddha, nel Dhamma e nel Sangha, ",
-  "iti74:3.7": "segue i cinque precetti e ha buone abitudini morali. ",
+  "iti74:3.7": "segue quei cinque precetti e ha buone abitudini morali. ",
   "iti74:3.8": "In questo modo il figlio va in una classe sociale superiore. ",
   "iti74:4.1": "E come un figlio va in una classe sociale identica? ",
   "iti74:4.2": "In questo caso la madre e il padre del figlio ",
