--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -20,7 +20,7 @@
   "iti74:5.2": "In questo caso la madre e il padre del figlio ",
   "iti74:5.3": "prendono rifugio nel Buddha, nel Dhamma, e nel Sangha. ",
   "iti74:5.4": "Si astengono dall’uccidere, dal rubare, dall’usare la propria sessualità in maniera inappropriata, dal mentire, dall’usare sostanze intossicanti, e hanno buone abitudini morali. ",
-  "iti74:5.5": "Il loro figlio invece si comporta altrimenti. ",
+  "iti74:5.5": "Il loro figlio invece ",
   "iti74:5.8": "In questo modo il figlio va in una classe sociale peggiore. ",
   "iti74:6.1": "I saggi desiderano che i propri figli ",
   "iti74:6.2": "nascano in una classe sociale migliore o identica, (abbiano una nascita migliore o equiparabile) ",
