--- a/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti74_translation-it-soma.json
@@ -31,7 +31,7 @@
   "iti74:7.1": "Quel tipo di figli nel mondo ",
   "iti74:7.2": "diventano discepoli laici ",
   "iti74:7.3": "pieni di fede e moralità, ",
-  "iti74:7.4": "generosi, non egoisti, ",
+  "iti74:7.4": "generosi, senza avarizia, ",
   "iti74:7.5": "come la luna libera dalle fitte nuvole, ",
   "iti74:7.6": "essi risplendono in comunità. "
 }
