--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -21,7 +21,7 @@
   "iti75:8.1": "La persona che offre elemosina con abbondanza, ",
   "iti75:8.2": "che ha compassione per tutte le creature ",
   "iti75:8.3": "condivide con gioia, ",
-  "iti75:8.4": "dona e parla di donare, ",
+  "iti75:8.4": "incoraggia gli altri a donare, ",
   "iti75:9.1": "come una nuvola in una tempesta, ",
   "iti75:9.2": "tuonando, gronda acqua [da tutte le parti] ",
   "iti75:9.3": "e riempie pieni zeppi d’acqua ",
