--- a/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti76:2.3": "Se il saggio vuole essere degno di ammirazione, acquisite (godere di) prosperità, o dopo la morte, quando il corpo perisce, rinascere in una buona destinazione, in un luogo paradisiaco, allora dovrebbe proteggere la propria virtù. ",
   "iti76:3.1": "Chi ha buon giudizio protegge la propria virtù ",
   "iti76:3.2": "desiderando tre tipi di felicità: ",
-  "iti76:3.3": "ammirazione, prosperità, ",
+  "iti76:3.3": "ammirazione, prosperità ",
   "iti76:3.4": "o le delizie dell’aldilà. ",
   "iti76:4.1": "Anche se uno non fa niente di male ",
   "iti76:4.2": "ma frequenta chi invece lo fa, ",
