--- a/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti76:3.1": "Chi ha buon giudizio protegge la propria virtù ",
   "iti76:3.2": "desiderando tre tipi di felicità: ",
   "iti76:3.3": "ammirazione, prosperità ",
-  "iti76:3.4": "o le delizie dell’aldilà. ",
+  "iti76:3.4": "e paradiso nell’aldilà. ",
   "iti76:4.1": "Anche se uno non fa niente di male ",
   "iti76:4.2": "ma frequenta chi invece lo fa, ",
   "iti76:4.3": "sarà sospettato di essere un malvivente ",
