--- a/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti76:4.2": "ma frequenta chi invece lo fa, ",
   "iti76:4.3": "sarà sospettato di essere un malvivente ",
   "iti76:4.4": "e poi così verrà screditato. ",
-  "iti76:5.1": "Chiunque sia l’amico che uno ha, ",
+  "iti76:5.1": "Chiunque sia l’amico che si ha, ",
   "iti76:5.2": "chiunque sia chi si frequenta, ",
   "iti76:5.3": "così uno diventa ",
   "iti76:5.4": "come la persona con cui si convenga. ",
