--- a/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti76_translation-it-soma.json
@@ -33,5 +33,5 @@
   "iti76:9.3": "il saggio non si assocerebbe con i non virtuosi ",
   "iti76:9.4": "ma sempre e solo con i virtuosi. ",
   "iti76:9.5": "I non virtuosi sono condotti all'inferno, ",
-  "iti76:9.6": "la virtù conduce in una buona destinazione. "
+  "iti76:9.6": "mentre i virtuosi sono portati a una buona destinazione. "
 }
