--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig6.2:0.2": "Шесть строф ",
   "thig6.2:0.3": " Васеттхи Тхери ",
   "thig6.2:1.1": "Горем по сыну сокрушённая, ",
-  "thig6.2:1.2": "Нагая, безрассудная, "
+  "thig6.2:1.2": "Нагая, безрассудная, ",
+  "thig6.2:1.3": "Со спутанными волосами, "
 }
