--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -6,5 +6,6 @@
   "thig6.2:1.2": "Нагая, безрассудная, ",
   "thig6.2:1.3": "Со спутанными волосами, ",
   "thig6.2:1.4": "Бродила тут и там я. ",
-  "thig6.2:2.1": "Три года на обочинах дорог жила, "
+  "thig6.2:2.1": "Три года на обочинах дорог жила, ",
+  "thig6.2:2.2": "На грудах мусора, "
 }
