--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig6.2:3.2": "Кто укрощает тех, кто не обуздан прежде был, ",
   "thig6.2:3.3": "В совершенстве Пробуждённого, ",
   "thig6.2:3.4": "Лишённого всех страхов. ",
-  "thig6.2:4.1": "Я, просветлев умом, "
+  "thig6.2:4.1": "Я, просветлев умом, ",
+  "thig6.2:4.2": "Ему воздала почести, присела рядом. "
 }
