--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.2:4.4": "Из сострадания — Готама. ",
   "thig6.2:5.1": "Услышав Дхамму, ",
   "thig6.2:5.2": "Я в скитания ушла. ",
-  "thig6.2:5.3": "Словам Учителя внимая, "
+  "thig6.2:5.3": "Словам Учителя внимая, ",
+  "thig6.2:5.4": "Достигла я благословенного покоя. "
 }
