--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig6.2:5.2": "Я в скитания ушла. ",
   "thig6.2:5.3": "Словам Учителя внимая, ",
   "thig6.2:5.4": "Достигла я благословенного покоя. ",
-  "thig6.2:6.1": "Покончено теперь со скорбью, "
+  "thig6.2:6.1": "Покончено теперь со скорбью, ",
+  "thig6.2:6.2": "Пришла она вся без остатка к завершенью; "
 }
