--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -23,5 +23,6 @@
   "thig6.2:5.3": "Словам Учителя внимая, ",
   "thig6.2:5.4": "Достигла я благословенного покоя. ",
   "thig6.2:6.1": "Покончено теперь со скорбью, ",
-  "thig6.2:6.2": "Пришла она вся без остатка к завершенью; "
+  "thig6.2:6.2": "Пришла она вся без остатка к завершенью; ",
+  "thig6.2:6.3": "Поистине, сама природа скорби "
 }
