--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -24,5 +24,6 @@
   "thig6.2:5.4": "Достигла я благословенного покоя. ",
   "thig6.2:6.1": "Покончено теперь со скорбью, ",
   "thig6.2:6.2": "Пришла она вся без остатка к завершенью; ",
-  "thig6.2:6.3": "Поистине, сама природа скорби "
+  "thig6.2:6.3": "Поистине, сама природа скорби ",
+  "thig6.2:6.4": "Постигнута всецело мной отныне. "
 }
