--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -1,5 +1,6 @@
 {
   "thig6.3:0.1": "Стихи старших монахинь 6.3 ",
   "thig6.3:0.2": "Шесть строф ",
-  "thig6.3:0.3": "Кхема Тхери "
+  "thig6.3:0.3": "Кхема Тхери ",
+  "thig6.3:1.1": "«Ты хороша собой, во цвете лет! "
 }
