--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig6.3:0.2": "Шесть строф ",
   "thig6.3:0.3": "Кхема Тхери ",
   "thig6.3:1.1": "«Ты хороша собой, во цвете лет! ",
-  "thig6.3:1.2": "Я тоже молодой. "
+  "thig6.3:1.2": "Я тоже молодой. ",
+  "thig6.3:1.3": "О Кхема, отчего ж не насладиться нам "
 }
