--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -5,5 +5,6 @@
   "thig6.3:1.1": "«Ты хороша собой, во цвете лет! ",
   "thig6.3:1.2": "Я тоже молодой. ",
   "thig6.3:1.3": "О Кхема, отчего ж не насладиться нам ",
-  "thig6.3:1.4": "Музыкою пяти инструментов?» "
+  "thig6.3:1.4": "Музыкою пяти инструментов?» ",
+  "thig6.3:2.1": "«Стыжусь я тела этого, "
 }
