--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -9,5 +9,6 @@
   "thig6.3:2.1": "«Стыжусь я тела этого, ",
   "thig6.3:2.2": "Подверженного разложенью, ",
   "thig6.3:2.3": "Хвори, гибели; ",
-  "thig6.3:2.4": "К страстям вся жажда умерла во мне. "
+  "thig6.3:2.4": "К страстям вся жажда умерла во мне. ",
+  "thig6.3:3.1": "Страсти стрелам и копьям подобны, "
 }
