--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -12,5 +12,6 @@
   "thig6.3:2.4": "К страстям вся жажда умерла во мне. ",
   "thig6.3:3.1": "Страсти стрелам и копьям подобны, ",
   "thig6.3:3.2": "Совокупности — плахе палача. ",
-  "thig6.3:3.3": "Что именуешь радостями ты —"
+  "thig6.3:3.3": "Что именуешь радостями ты —",
+  "thig6.3:3.4": "Уже давно не радость для меня. "
 }
