--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -21,5 +21,6 @@
   "thig6.3:5.3": "Не зная всех явлений такими, какие есть они. ",
   "thig6.3:5.4": "Я неразумною была, <j>Но мнила: «Это — чистота». ",
   "thig6.3:6.1": "Теперь я поклоняюсь в совершенстве Пробуждённому, ",
-  "thig6.3:6.2": "Высшему среди людей; "
+  "thig6.3:6.2": "Высшему среди людей; ",
+  "thig6.3:6.3": "Ото всех страданий освобождена, "
 }
