--- a/translation/my/site/footer_translation-my-site.json
+++ b/translation/my/site/footer_translation-my-site.json
@@ -1,24 +1,26 @@
 {
   "footer:about": "အကြောင်းအရာ",
   "footer:acknowledgments": "မှတ်တမ်းတင်လွှာများ",
+  "footer:allWork": "ဤ website ကို AI ဖြင့် ဖန်တီးထားခြင်း မဟုတ်၊ လူများမှ ပြုလုပ်ထားခြင်း ဖြစ်သည်။ ",
   "footer:buddhaNexus": "BuddhaNexus — AI နည်းပညာဖြင့် သုတ္တံများကို ဖော်ထုတ်ထားသည်။ ",
   "footer:buddhismnet": "Buddhism.net - ဗုဒ္ဓ၏မြတ်တရားတော်များ လေ့လာသင်ကြားနိုင်စေရန် ပြုလုပ်ထားသည်။ ",
+  "footer:byHumans": "လူသားများမှ လူသားများအတွက် ",
   "footer:discoursesGuideSujato": "တရားတော်များ - ဗုဒ္ဓမြတ်ဘုရားထံ လျှောက်ထားမေးမြန်းမှုများ။ ",
   "footer:editions": "SuttaCentral ထုတ်ဝေမှု- ရွေးချယ်ထားသော ဘာသာပြန်များကို စာအုပ်အနေဖြင့် ဖတ်ခြင်း ",
   "footer:generalGuideSujato": "စာဖတ်သူအတွက် လမ်းညွှန်များ",
   "footer:home": "မူလစာမျက်နှာ",
   "footer:introduction": "SuttaCentral နှင့် မိတ်ဆက်ခြင်း",
-  "footer:languages": "SuttaCentral ရှိ ဘာသာစကားအလိုက်ရှိသော အချက်အလက်များစာရင်း",
-  "footer:licensing": "လိုင်စင်ချပေးခြင်း",
-  "footer:methodology": "မူကွဲယှဉ်တွဲဖော်ပြမှုအတွက် နည်းစနစ်များ",
+  "footer:languages": "SuttaCentral ရှိ ဘာသာစကားအလိုက်ရှိသော စာရင်းဇယားများ ",
+  "footer:licensing": "သုံးစွဲခွင့်လိုင်စင်ပေးခြင်း ",
+  "footer:methodology": "မူကွဲများယှဉ်တွဲဖော်ပြမှုအတွက် နည်းစနစ်များ ",
   "footer:numbering": "သုတ္တံနံပါတ်စဉ်ခြင်း စနစ်များ",
   "footer:paliCanonOverview": "ပါဠိ ပိဋိကတော် ခြုံငုံကြည့်ခြင်း ",
   "footer:readingfaithfully": "Reading Faithfully - သုတ္တံများကို သဒ္ဓါတရားထက်သန်သူတပည့်များ လေးနက်စွာဖတ်ရှုနိုင်ရန်ဖြစ်သည်",
   "footer:relatedProjects": "ဆက်စပ်နေသော လုပ်ငန်းများ ",
-  "footer:scawesome": "အံ့ဩစရာ SuttaCentral - SuttaCentral ရှိဗုဒ္ဓဓမ္မစာပေများသည် အံ့မခန်းရှိလှပြီ။ ထိုမှထပ်ဆင့် ပြုထားသော အံ့မခန်းချက်များ။",
+  "footer:scawesome": "အံ့မခန်း SuttaCentral - SuttaCentral ၏အံ့မခန်းချက်များ အပေါ်ထပ်ဆင့် ပြုထားသော အံ့မခန်းချက်များ။ ",
   "footer:scforum": "ဆွေးနွေးခြင်းနှင့် ရှာဖွေခြင်း — SuttaCentral ဖိုရမ်",
   "footer:scvoice": "SuttaCentral အသံ — သုတ္တံများ နာကြားရန်",
-  "footer:sourceCode": "ကွန်ပျူတာသုံးစာများ Github တွင်ရှိသည်။ ",
+  "footer:sourceCode": "မူရင်းစာများ Github တွင်ရှိသည်။ ",
   "footer:start": "သုတ္တံ ရွတ်ဖတ်ခြင်းဖြင့် စနိုင်ပါပြီ။",
   "footer:subjects": "အညွှန်းများ",
   "footer:technicalInformation": "နည်းပညာဆိုင်ရာအကြောင်းအရာများ",
