--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti27:2.1": "Cercatori, tra tutte le opere meritevoli alla base della rinascita, nessuna vale nemmeno una minima parte della liberazione del cuore attraverso l’amore.           /////                           Cercatori, tutte le opere buone (meritevoli) portano alla rinascita. Di queste, nessuna varrebbe nemmeno una minima [sedicesima --> add: footnote ] parte della liberazione del cuore attraverso l’amore. [[[Cercatori, tutte le opere buone (meritevoli) alla base di una buona rinascita non valgono nemmeno una sedicesima [minima] parte della liberazione del cuore attraverso l’amore. // ]] ",
+  "iti27:2.1": "Cercatori, tra tutte le opere meritevoli alla base della rinascita, nessuna vale nemmeno una minima parte della liberazione del cuore attraverso l’amore [sedicesima --> add: footnote ] ",
   "iti27:2.2": "La liberazione del cuore con l’amore sorpassa tutte quelle cose ed è splendente, abbagliante, luccicante. ",
   "iti27:3.1": "Come la luce di tutte le stelle non è minimamente equiparabile alla luce della luna….. ",
   "iti27:3.2": "allo stesso modo…. ",
