--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti84:2.3": "Quando appare nel mondo uno che è arrivato alla verità, un Arahant, un Buddha perfettamente risvegliato, dalla sapienza e dalla condotta perfetta, fortunato, conoscitore del mondo, suprema guida di chi vuol essere guidato, maestro di Deva e di esseri umani, il Buddha, il Bhagavant. ",
   "iti84:2.4": "Insegna un Dhamma che è bello all’inizio, durante, e dopo, sia nel significato che nella forma, e rivela un tipo di vita spirituale completamente perfetta e pura. ",
   "iti84:2.5": "Questa è il primo tipo di persona che appare nel mondo per il giovamento, l’agio, la compassione, la fortuna, il beneficio e la felicità di molte creature umane e divine.** ",
-  "iti84:3.1": "x E poi c’è anche un discepolo di quel esatto maestro, ...** ",
+  "iti84:3.1": "Quando invece c’è un discepoli del maestro che è un arahant, che ha distrutto ogni compulsione (āsava), si è realizzato, ha fatto quello che doveva fare, ha posato il fardello, ha raggiunto il traguardo più benefico, ha reciso le catene dell’esistenza, si è liberato grazie alla corretta comprensione. *** ",
   "iti84:3.2": "x ",
   "iti84:3.3": "x ",
   "iti84:4.1": "x E poi c’è un discepolo di quel esatto maestro, ...** un apprendista molto esperto ancora in cammino, che segue precetti e osservanze. ",
