--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti84:3.3": "Questo è il secondo tipo di persona che appare nel mondo per il giovamento, l’agio, la compassione, la fortuna, il beneficio e la felicità di molte creature umane e divine.** ",
   "iti84:4.1": "Quando c’è invece un discepolo di quel maestro, ancora in allenamento, che è ancora in cammino, è molto istruito e segue precetti e osservanze. ",
   "iti84:4.2": "Insegna un Dhamma che è bello all’inizio, durante, e dopo, sia nel significato che nella forma, e rivela un tipo di vita religiosa completamente perfetta e pura. ** ",
-  "iti84:4.3": "x ",
+  "iti84:4.3": "Questo è il terzo tipo di persona che appare nel mondo per il giovamento, l’agio, la compassione, la fortuna, il beneficio e la felicità di molte creature umane e divine.** ",
   "iti84:5.1": "“Il primo maestro nel mondo è il grande rishi, ",
   "iti84:5.2": "seguito dal discepolo che si è evoluto/coltivato, ",
   "iti84:5.3": "e poi dall’apprendista ancora in cammino, ",
