--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti84:4.2": "Insegna un Dhamma che è bello all’inizio, durante, e dopo, sia nel significato che nella forma, e rivela un tipo di vita religiosa completamente perfetta e pura. ** ",
   "iti84:4.3": "Questo è il terzo tipo di persona che appare nel mondo per il giovamento, l’agio, la compassione, la fortuna, il beneficio e la felicità di molte creature umane e divine.** ",
   "iti84:5.1": "“Il primo maestro nel mondo è il grande rishi, ",
-  "iti84:5.2": "seguito dal discepolo che si è completato (evoluto/coltivato), ",
+  "iti84:5.2": "poi il discepolo che si è completato (evoluto/coltivato), ",
   "iti84:5.3": "e poi dall’apprendista ancora in cammino, ",
   "iti84:5.4": "molto esperto, che segue precetti e osservanze. ",
   "iti84:6.1": "Questi tre, migliori tra i Deva e gli esseri umani, ",
