--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "an2.22:1.0": "22 ",
   "an2.22:1.1": "„Mönche und Nonnen, es gibt zwei, die den Klargewordenen falsch darstellen. ",
   "an2.22:1.2": "Welche zwei? ",
-  "an2.22:1.3": "Einer, der im Verborgenen Hass hegt, und einer, dessen Vertrauen fehlgeleitet ist. ",
+  "an2.22:1.3": "Einen, der im Verborgenen Hass hegt, und einen, dessen Vertrauen fehlgeleitet ist. ",
   "an2.22:1.4": "Diese beiden stellen den Klargewordenen falsch dar.“ ",
   "an2.23:1.0": "23 ",
   "an2.23:1.1": "„Mönche und Nonnen, es gibt zwei, die den Klargewordenen falsch darstellen. ",
