--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "an2.24:1.0": "24 ",
   "an2.24:1.1": "„Mönche und Nonnen, es gibt zwei, die den Klargewordenen falsch darstellen. ",
   "an2.24:1.2": "Welche zwei? ",
-  "an2.24:1.3": "Einer, der eine Lehrrede, die der Auslegung bedarf, als eine Lehrrede darstellt, deren Bedeutung offensichtlich ist. Und einer, der eine Lehrrede, deren Bedeutung offensichtlich ist, als eine Lehrrede darstellt, die der Auslegung bedarf. ",
+  "an2.24:1.3": "Einen, der eine Lehrrede, die der Auslegung bedarf, als eine Lehrrede darstellt, deren Bedeutung offensichtlich ist. Und einen, der eine Lehrrede, deren Bedeutung offensichtlich ist, als eine Lehrrede darstellt, die der Auslegung bedarf. ",
   "an2.24:1.4": "Diese beiden stellen den Klargewordenen falsch dar.“ ",
   "an2.25:1.0": "25 ",
   "an2.25:1.1": "„Es gibt zwei, die den Klargewordenen richtig darstellen. ",
