--- a/translation/it/giovannizappa/sutta/mn/mn102_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn102_translation-it-giovannizappa.json
@@ -43,7 +43,7 @@
   "mn102:10.5": "ma solo con un residuo di fenomeni condizionati. ",
   "mn102:10.6": "‘Tutto questo è condizionato e grossolano. Ma esiste la cessazione delle condizioni: *quello* è reale’. ",
   "mn102:10.7": "Comprendendo questo e vedendo la fuga da esso, il Realizzato è andato oltre tutto ciò. ",
-  "mn102:11.1": "Ora, gli asceti e i bramini che postulano l’annientamento, l’eradicazione, e l’obliterazione di un essere esistente respingono coloro che postulano un Sè dano dopo la morte, che sia percipiente, o non-percipiente, o né percipiente né non-percipiente. ",
+  "mn102:11.1": "Ora, gli asceti e i bramini che postulano l’annientamento, l’eradicazione, e l’obliterazione di un essere esistente respingono coloro che postulano un Sè sano dopo la morte, che sia percipiente, o non-percipiente, o né percipiente né non-percipiente. ",
   "mn102:11.2": "Perché questo? ",
   "mn102:11.3": "Perché pensano: ‘Tutti quegli asceti e bramini postulano semplicemente il loro attaccamento a una vita migliore dopo la morte: ",
   "mn102:11.4": "“Dopo la morte saremo così! Dopo la morte saremo cosà!” ",
