--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn22.38:2.1": "„Ānanda, angenommen, du würdest gefragt: ",
   "sn22.38:2.2": "‚Geehrter Ānanda, was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen waren? ",
   "sn22.38:2.3": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen sein werden? ",
-  "sn22.38:2.4": "Was sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen?‘ ",
+  "sn22.38:2.4": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen sind?‘ ",
   "sn22.38:2.5": "Wie würdest du antworten?“ ",
   "sn22.38:2.6": "„Herr, angenommen, ich würde gefragt: ",
   "sn22.38:2.7": "‚Was sind die Dinge, bei denen man das Entstehen sah, das Verschwinden sah und sah, dass sie sich änderten, während sie bestanden? ",
