--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn22.38:2.6": "„Herr, angenommen, ich würde gefragt: ",
   "sn22.38:2.7": "‚Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen waren? ",
   "sn22.38:2.8": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen sein werden? ",
-  "sn22.38:2.9": "Was sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen?‘, ",
+  "sn22.38:2.9": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen sind?‘, ",
   "sn22.38:2.10": "dann würde ich so antworten: ",
   "sn22.38:2.11": "‚Geehrter, wenn Form vergangen ist, aufgehört hat und zugrunde gegangen ist, ",
   "sn22.38:2.12": "sah man ihr Entstehen, man sah ihr Verschwinden und man sah, dass sie sich änderte, während sie bestand. ",
